<resources>
    <string name="app_name">GPA_01639877_Calculator</string>
    <string name="gpa">GPA</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="gym">Gym</string>
    <string name="history">History</string>
    <string name="science">Science</string>
    <string name="english">English</string>
    <string name="math">Math</string>
    <string name="clear">Clear</string>
</resources>